# gather_files

./: .gather  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
docs/: ROADMAP.md
docs/changes/: 0.2.x.md
gather/: output.txt
src/: args.rs  config.rs  gather.rs  gitignore.rs  lib.rs  main.rs  model.rs  scanner.rs  updater.rs
src/outline/: mod.rs  provider.rs  registry.rs  rust.rs
src/scanner/: counter.rs  detector.rs  mod.rs  sort.rs  utils.rs  walker.rs
src/templates/: gather_default.toml
tests/: cli.rs  outline_cli.rs  outline_section.rs  precedence.rs
