[package]
name        = "gather_files"
version = "0.4.0"
edition     = "2021"
description = "Gather project files for LLM processing"
authors     = ["herring101"]
license     = "MIT"
repository  = "https://github.com/herring101/gather_files"
readme      = "README.md"
keywords    = ["llm", "files", "gather", "development"]
categories  = ["development-tools", "command-line-utilities"]

[dependencies]
anyhow  = "1.0.86"
chrono  = "0.4.39"
walkdir = "2.5.0"
globset = "0.4.15"
clap    = { version = "4.5.23", features = ["derive"] }
self_update = { version = "0.42", default-features = false, features = ["rustls"] }
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile   = "3.14.0"

[lib]
name = "gather_files_lib"
path = "src/lib.rs"

[[bin]]
name = "gather"
path = "src/main.rs"
